<resources>
    <string name="app_name">QuanLyPhongTro</string>
    <string name="maphong">Mã Phòng: </string>
    <string name="ten">Tên:</string>
    <string name="gioitinh">Giới tính: </string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="username">Enter Username</string>
    <string name="fullname">Enter Fullname</string>
    <string name="male">Male</string>
    <string name="thuephong">Thuê Phòng: </string>
    <string name="ten1">Vũ Như Cẩn</string>
    <string name="chon">Chọn</string>
    <string name="female">Female</string>
    <string name="sdt1">7463283823</string>
    <string name="tien">Tiền:</string>
    <string name="dathue">Đã Thuê</string>
    <string name="dathu">Đã Thu</string>
    <string name="ngaythue">Ngày Thuê: </string>
    <string name="them">Thêm</string>
    <string name="themphongmoi">THÊM PHÒNG MỚI</string>
    <string name="themnguoithue">THÊM NGƯỜI THUÊ</string>
    <string name="ngaylAPhd">Ngày Lập HĐ: </string>
    <string name="suanguoithue">SỬA NGƯỜI THUÊ</string>
    <string name="suathongtinphong">SỬA THÔNG TIN PHÒNG</string>
    <string name="gioiting">Giới Tính: </string>
    <string name="tennt">Tên NT: </string>
    <string name="luu">Lưu</string>
    <string name="cmnd">CMND: </string>
    <string name="lau">Lầu: </string>
    <string name="trangthai">Trạng Thái: </string>
    <string name="sdt">SDT: </string>
    <string name="tiencoc">Tiền Cọc: </string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="register">Register</string>
    <string name="laphd">Lập Hóa Đơn</string>
    <string name="sua">Sửa</string>
    <string name="ngaysinh">Ngày Sinh</string>
    <string name="cmndsau">CMND sau: </string>
    <string name="cmndtruoc">CMND trước: </string>
    <string name="anhdd">Ảnh DD</string>
    <string name="login">Login</string>
    <string name="tenphong">Tên Phòng: </string>
    <string name="ngaylaphd">Ngày Lập HD: </string>
    <string name="tienphong">Tiền Phòng: </string>
    <string name="confirmpass">Enter confirm password</string>
    <string name="gender">Gender</string>
    <string name="sonuoc">Số Nước: </string>
    <string name="tiennuoc">Tiền Nước: </string>
    <string name="sodien">Số Điện: </string>
    <string name="tiendien">Tiền Điện: </string>
    <string name="tienInternet">Tiền Internet: </string>
    <string name="tiendvkhac">Tiền DV Khác: </string>
    <string name="tongtien">Tổng Tiền: </string>
    <string name="tongtien1">30</string>
    <string name="not_register">Not Register</string>
    <string name="already_account">Already Account</string>
    <string name="tien1">30</string>
    <string name="hoadon">HÓA ĐƠN</string>
    <string name="sonuoccu">Số Nước Cũ: </string>
    <string name="sodiencu">Số Điện Cũ: </string>
    <string name="sodienmoi">Số Điện Mới: </string>
    <string name="sonuocmoi">Số Nước Mới: </string>
    <string name="nhan">x</string>
    <string name="ngaylhd">20/1/2020</string>
    <string name="phong1">P1</string>
    <string name="thang">Tháng:</string>
    <string name="chitiethd">CHI TIẾT HÓA ĐƠN</string>
    <string name="capnhatdiennuoc">CẬP NHÂT GIÁ ĐIỆN NƯỚC</string>
    <string name="giadien">Gía điện</string>
    <string name="gianuoc">Gía nước</string>
    <string name="dong">đồng</string>
    <!--    &lt;!&ndash; TODO: Remove or change this placeholder text &ndash;&gt;-->
    <!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
</resources>
