<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SuaPhongActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suathongtinphong"
        android:gravity="center"
        android:textSize="30dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/tenphong"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtTenPhong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="text" />
        <requestFocus />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/tiencoc"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtTienCoc"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/tien1"
            android:gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="đồng"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/lau"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtLau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/sodien"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtSoDien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/sonuoc"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtSoNuoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/trangthai"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spnTrangThaiSua"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:gravity="center"
        android:orientation="horizontal">



        <Button
            android:id="@+id/btnLuuPhong"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/luu" />


    </LinearLayout>

</LinearLayout>