<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10sp"
    tools:context=".ChiTietHoaDonActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chitiethd"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:text="@string/tenphong"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:id="@+id/txtTenPhong_CTHD"
                android:textSize="25sp"
                android:hint="@string/phong1"
                android:gravity="start"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:text="@string/ngaylaphd"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:id="@+id/txtNgayLapHoaDon_CTHD"
                android:textSize="25sp"
                android:hint="@string/ngaylhd"
                android:gravity="start"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:text="@string/tienphong"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:id="@+id/txtTienPhong_CTHD"
                android:textSize="25sp"
                android:hint="@string/tien1"
                android:gravity="start"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:text="@string/sonuoc"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:id="@+id/txtSoNuoc_CTHD"
                android:textSize="25sp"
                android:hint="@string/tien1"
                android:gravity="center"/>
            <TextView
                android:layout_width="30sp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/nhan"
                android:gravity="center"/>
            <TextView
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:id="@+id/txtGiaNuoc_CTHD"
                android:textSize="25sp"
                android:hint="@string/tien1"
                android:gravity="start"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:text="@string/tiennuoc"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:id="@+id/txtTienNuoc_CTHD"
                android:textSize="25sp"
                android:hint="@string/tien1"
                android:gravity="start"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:text="@string/sodien"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/txtSoDien_CTHD"
                android:layout_width="40sp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/tien1"
                android:textSize="25sp" />
            <TextView
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/nhan"
                android:gravity="center"/>
            <TextView
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:id="@+id/txtGiaDien_CTHD"
                android:textSize="25sp"
                android:hint="@string/tien1"
                android:gravity="start"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:text="@string/tiendien"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:id="@+id/txtTienDien_CTHD"
                android:textSize="25sp"
                android:hint="@string/tien1"
                android:gravity="start"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:text="@string/tienInternet"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtTienInternet_CTHD"
                android:textSize="25sp"
                android:hint="@string/tien1"
                android:gravity="start"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:text="@string/tiendvkhac"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:id="@+id/txtTienDVKhac_CTHD"
                android:textSize="25sp"
                android:hint="@string/tien1"
                android:gravity="start"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:text="Lý do thu:"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/txtLyDoThu_CTHD"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="Tiền rác"
                android:textSize="25sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:text="@string/tongtien"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:id="@+id/txtTongTien_CTHD"
                android:textSize="25sp"
                android:textColor="@color/tongtien"
                android:textStyle="italic"
                android:hint="@string/tongtien1"
                android:gravity="start"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>